@@ -818,9 +818,6 @@ init_lexer(void)
 #ifdef EVAL_COST_TRACE
     add_permanent_define("__EVAL_COST_TRACE__", -1, string_copy("1"), MY_FALSE);
 #endif
-#ifdef MSDOS_FS
-    add_permanent_define("__MSDOS_FS__", -1, string_copy("1"), MY_FALSE);
-#endif
 #ifdef HAS_IDN
     add_permanent_define("__IDNA__", -1, string_copy("1"), MY_FALSE);
 #endif
