@@ -541,11 +541,7 @@ main (int argc, char **argv)
                      , (unsigned long)strlen(BINDIR)+6);
             }
             strcpy(erq_file, BINDIR);
-#ifndef MSDOS_FS
             strcat(erq_file, "/erq");
-#else
-            strcat(erq_file, "\\erq");
-#endif
         }
         else if (*erq_file != '/')
         {
@@ -557,11 +553,7 @@ main (int argc, char **argv)
                      , (unsigned long)(strlen(BINDIR)+2+strlen(erq_file)));
             }
             strcpy(tmp, BINDIR);
-#ifndef MSDOS_FS
             strcat(tmp, "/");
-#else
-            strcat(tmp, "\\");
-#endif
             strcat(tmp, erq_file);
             free(erq_file);
             erq_file = tmp;
@@ -2088,9 +2080,6 @@ options (void)
 #       endif
 #       if defined(NO_INLINES)
                               , "NO_INLINES"
-#       endif
-#       if defined(MSDOS_FS)
-                              , "MSDOS_FS"
 #       endif
 #       if defined(TRACECODE)
                               , "TRACECODE"
